
public static class Constants
{
    // constants can go here, e.g.:
    // const float MAGIC_NUMBER = float.MaxValue;

    // tags
    public const string UNTAGGED = "Untagged";
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";
    public const string MOVING_PLATFORM_TAG = "MovingPlatform";

    // layers
    public const string DEFAULT_LAYER = "Default";
    public const string PLAYER_LAYER = "Player";
    public const string INVINCIBLE_LAYER = "Invincible";

    // animations
    public const string MELEE_ATTACK_ANIMATION = "MeleeAttack";
    public const string PROJECTILE_ATTACK_ANIMATION = "ProjectileAttack";
    public const string HURT_ANIMATION = "Hurt";
    public const string JUMP_RISE_ANIMATION = "Jump";
    public const string JUMP_FALL_ANIMATION = "Fall";
    public const string JUMP_LAND_ANIMATION = "Land";
    public const string BOUNCE_ANIMATION = "Bounce";
    public const string IDLE_TRANSITION_ANIMATION = "IdleTransition";
    public const string IS_MOVING_BOOL = "isMoving";
    public const string IS_GROUNDED_BOOL = "isGrounded";
    public const string JUDGEMENT_CAT_END_CHARGE_ANIMATION = "JudgementCatEndCharge";
    public const string JUDGEMENT_CAT_END_SLASH_ANIMATION = "JudgementCatEndSlash";
    public const string JUDGEMENT_CAT_END_SHEATH_ANIMATION = "JudgementCatEndSheath";

    // common
    public const float GRAVITY = 9.8f;
}
